Body Scroll Fix closes #389 (#408)
* add/remove body class on modal open/close

* remove body scrollbars when modal open

* tweak styles and collocate better

* Applied open state class name on DropdownMenuList component.

* Revert "Applied open state class name on DropdownMenuList component."

This reverts commit 5b221efba08f0c936ed2fc410b79ac4a069fca6f.

* Updated dropdown menu placement and z-index.

* Small improvement.

* Moved AlertDialog styles to components.

--- a/packages/components/src/DropdownMenu/styles.scss
+++ b/packages/components/src/DropdownMenu/styles.scss
@@ -5,7 +5,7 @@
 		padding: var(--ee-padding-smaller) var(--ee-padding-smaller) var(--ee-padding-small);
 
 		&[role='menu'] {
-			z-index: 2;
+			z-index: 100;
 		}
 	}
 
